# di

./: CMakeLists.txt  README.md
.github/workflows/: linux.yml  test.yml
examples/: CMakeLists.txt
examples/src/: main.cpp
include/di/: args.h  container.h  container.hpp  di.h  exception.h  factory.h  factory.hpp  factory_context.h  object_factory.h  policy.h  scope.h  shared_factory.h  shared_functor_factory.h  shared_impl_factory.h  shared_impl_functor_factory.h  single_factory.h  single_impl_factory.h  traits.h  type_traits.h  unique_factory.h  unique_functor_factory.h
test/: CMakeLists.txt
test/src/: di.cpp  main.cpp
